--- a/design-html/css/style.css
+++ b/design-html/css/style.css
@@ -1,61 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap');
-:root{
-    --color-barra-lateral:rgb(255,255,255);
 
-    --color-texto:rgb(0,0,0);
-    --color-texto-menu:rgb(134,136,144);
+:root {
+    --color-barra-lateral: #ffffff;
 
-    --color-menu-hover:rgb(238,238,238);
-    --color-menu-hover-texto:rgb(0,0,0);
+    --color-texto: #000000;
+    --color-texto-menu: #868890;
 
-    --color-boton:rgb(0,0,0);
-    --color-boton-texto:rgb(255,255,255);
+    --color-menu-hover: #eeeeee;
+    --color-menu-hover-texto: #000000;
 
-    --color-linea:rgb(180,180,180);
+    --color-boton: #000000;
+    --color-boton-texto: #ffffff;
 
-    --color-switch-base :rgb(201,202,206);
-    --color-switch-circulo:rgb(241,241,241);
+    --color-linea: #b4b4b4;
 
-    --color-scroll:rgb(192,192,192);
-    --color-scroll-hover:rgb(134,134,134);
+    --color-switch-base: #C9CACE;
+    --color-switch-circulo: #f1f1f1;
+
+    --color-scroll: #c0c0c0;
+    --color-scroll-hover: #868686;
 }
 
-.dark-mode{
-    --color-barra-lateral:rgb(44,45,49);
+.dark-mode {
+    --color-barra-lateral: #2c2d31;
 
-    --color-texto:rgb(255,255,255);
-    --color-texto-menu:rgb(110,110,117);
+    --color-texto: #ffffff;
+    --color-texto-menu: #6e6e75;
 
-    --color-menu-hover:rgb(0,0,0);
-    --color-menu-hover-texto:rgb(238,238,238);
+    --color-menu-hover: #000000;
+    --color-menu-hover-texto: #eeeeee;
 
-    --color-boton:rgb(255,255,255);
-    --color-boton-texto:rgb(0,0,0);
+    --color-boton: #ffffff;
+    --color-boton-texto: #000000;
 
-    --color-linea:rgb(90,90,90);
+    --color-linea: #5a5a5a;
 
-    --color-switch-base :rgb(39,205,64);
-    --color-switch-circulo:rgb(255,255,255);
+    --color-switch-base: #27cd40;
+    --color-switch-circulo: #ffffff;
 
-    --color-scroll:rgb(68,69,74);
-    --color-scroll-hover:rgb(85,85,85);
+    --color-scroll: #44454a;
+    --color-scroll-hover: #555555;
 }
 
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Outfit', sans-serif;
 }
-body{
+
+body {
     height: 100vh;
     width: 100%;
     background-color: darkcyan;
 }
 
-/*-----------------Menu*/
-.menu{
+/* Menu */
+.menu {
     position: fixed;
     width: 50px;
     height: 50px;
@@ -72,9 +74,8 @@ body{
     z-index: 100;
 }
 
-
-/*----------------Barra Lateral*/
-.barra-lateral{
+/* Barra Lateral */
+.barra-lateral {
     position: fixed;
     display: flex;
     flex-direction: column;
@@ -84,28 +85,30 @@ body{
     overflow: hidden;
     padding: 20px 15px;
     background-color: var(--color-barra-lateral);
-    transition: width 0.5s ease,background-color 0.3s ease,left 0.5s ease;
+    transition: width 0.5s ease, background-color 0.3s ease, left 0.5s ease;
     z-index: 50;
 }
 
-.mini-barra-lateral{
+.mini-barra-lateral {
     width: 80px;
 }
-.barra-lateral span{
+
+.barra-lateral span {
     width: 100px;
     white-space: nowrap;
     font-size: 18px;
     text-align: left;
     opacity: 1;
-    transition: opacity 0.5s ease,width 0.5s ease;
+    transition: opacity 0.5s ease, width 0.5s ease;
 }
-.barra-lateral span.oculto{
+
+.barra-lateral span.oculto {
     opacity: 0;
     width: 0;
 }
 
-/*------------> Nombre de la página */
-.barra-lateral .nombre-pagina{
+/* Nombre de la página */
+.barra-lateral .nombre-pagina {
     width: 100%;
     height: 45px;
     color: var(--color-texto);
@@ -113,19 +116,20 @@ body{
     display: flex;
     align-items: center;
 }
-.barra-lateral .nombre-pagina ion-icon{
+
+.barra-lateral .nombre-pagina ion-icon {
     min-width: 50px;
     font-size: 40px;
     cursor: pointer;
 }
-.barra-lateral .nombre-pagina span{
+
+.barra-lateral .nombre-pagina span {
     margin-left: 5px;
     font-size: 25px;
 }
 
-
-/*------------> Botón*/
-.barra-lateral .boton{
+/* Botón */
+.barra-lateral .boton {
     width: 100%;
     height: 45px;
     margin-bottom: 20px;
@@ -137,34 +141,39 @@ body{
     background-color: var(--color-boton);
     color: var(--color-boton-texto);
 }
-.barra-lateral .boton ion-icon{
+
+.barra-lateral .boton ion-icon {
     min-width: 50px;
     font-size: 25px;
 }
 
-
-/*--------------> Menu Navegación*/
-.barra-lateral .navegacion{
+/* Menu Navegación */
+.barra-lateral .navegacion {
     height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
 }
-.barra-lateral .navegacion::-webkit-scrollbar{
+
+.barra-lateral .navegacion::-webkit-scrollbar {
     width: 5px;
 }
-.barra-lateral .navegacion::-webkit-scrollbar-thumb{
+
+.barra-lateral .navegacion::-webkit-scrollbar-thumb {
     background-color: var(--color-scroll);
     border-radius: 5px;
 }
-.barra-lateral .navegacion::-webkit-scrollbar-thumb:hover{
+
+.barra-lateral .navegacion::-webkit-scrollbar-thumb:hover {
     background-color: var(--color-scroll-hover);
 }
-.barra-lateral .navegacion li{  
+
+.barra-lateral .navegacion li {
     list-style: none;
     display: flex;
     margin-bottom: 5px;
 }
-.barra-lateral .navegacion a{
+
+.barra-lateral .navegacion a {
     width: 100%;
     height: 45px;
     display: flex;
@@ -173,32 +182,35 @@ body{
     border-radius: 10px;
     color: var(--color-texto-menu);
 }
-.barra-lateral .navegacion a:hover{
+
+.barra-lateral .navegacion a:hover {
     background-color: var(--color-menu-hover);
     color: var(--color-menu-hover-texto);
 }
-.barra-lateral .navegacion ion-icon{
+
+.barra-lateral .navegacion ion-icon {
     min-width: 50px;
     font-size: 20px;
 }
 
-/*-----------------> Linea*/
-.barra-lateral .linea{
+/* Linea */
+.barra-lateral .linea {
     width: 100%;
     height: 1px;
     margin-top: 15px;
     background-color: var(--color-linea);
 }
 
-/*----------------> Modo Oscuro*/
-.barra-lateral .modo-oscuro{
+/* Modo Oscuro */
+.barra-lateral .modo-oscuro {
     width: 100%;
     margin-bottom: 80px;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
 }
-.barra-lateral .modo-oscuro .info{
+
+.barra-lateral .modo-oscuro .info {
     width: 150px;
     height: 45px;
     overflow: hidden;
@@ -206,14 +218,15 @@ body{
     align-items: center;
     color: var(--color-texto-menu);
 }
-.barra-lateral .modo-oscuro ion-icon{
+
+.barra-lateral .modo-oscuro ion-icon {
 
     width: 50px;
     font-size: 20px;
 }
 
-/*--->switch*/
-.barra-lateral .modo-oscuro .switch{
+/* switch */
+.barra-lateral .modo-oscuro .switch {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -221,7 +234,8 @@ body{
     height: 45px;
     cursor: pointer;
 }
-.barra-lateral .modo-oscuro .base{
+
+.barra-lateral .modo-oscuro .base {
     position: relative;
     display: flex;
     align-items: center;
@@ -230,7 +244,8 @@ body{
     background-color: var(--color-switch-base);
     border-radius: 50px;
 }
-.barra-lateral .modo-oscuro .circulo{
+
+.barra-lateral .modo-oscuro .circulo {
     position: absolute;
     width: 18px;
     height: 90%;
@@ -239,21 +254,24 @@ body{
     left: 2px;
     transition: left 0.5s ease;
 }
-.barra-lateral .modo-oscuro .circulo.prendido{
+
+.barra-lateral .modo-oscuro .circulo.prendido {
     left: 15px;
 }
 
 /*---------------> Usuario*/
-.barra-lateral .usuario{
+.barra-lateral .usuario {
     width: 100%;
     display: flex;
 }
-.barra-lateral .usuario img{
+
+.barra-lateral .usuario img {
     width: 50px;
     min-width: 50px;
     border-radius: 10px;
 }
-.barra-lateral .usuario .info-usuario{
+
+.barra-lateral .usuario .info-usuario {
     width: 100%;
     display: flex;
     align-items: center;
@@ -261,70 +279,77 @@ body{
     color: var(--color-texto);
     overflow: hidden;
 }
-.barra-lateral .usuario .nombre-email{
+
+.barra-lateral .usuario .nombre-email {
     width: 100%;
     display: flex;
     flex-direction: column;
     margin-left: 5px;
 }
-.barra-lateral .usuario .nombre{
+
+.barra-lateral .usuario .nombre {
     font-size: 15px;
     font-weight: 600;
 }
-.barra-lateral .usuario .email{
+
+.barra-lateral .usuario .email {
     font-size: 13px;
 }
-.barra-lateral .usuario ion-icon{
+
+.barra-lateral .usuario ion-icon {
     font-size: 20px;
 }
 
-
-/*-------------main*/
-
-#inbox{
+/* main */
+#inbox {
     background-color: var(--color-menu-hover);
     color: var(--color-menu-hover-texto);
 }
 
-main{
+main {
     margin-left: 250px;
     padding: 20px;
     transition: margin-left 0.5s ease;
 }
-main.min-main{
+
+main.min-main {
     margin-left: 80px;
 }
 
-
-
-/*------------------> Responsive*/
-@media (max-height: 660px){
-    .barra-lateral .nombre-pagina{
+/* Responsive mode */
+@media (max-height: 660px) {
+    .barra-lateral .nombre-pagina {
         margin-bottom: 5px;
     }
-    .barra-lateral .modo-oscuro{
+
+    .barra-lateral .modo-oscuro {
         margin-bottom: 3px;
     }
 }
-@media (max-width: 600px){
-    .barra-lateral{
+
+@media (max-width: 600px) {
+    .barra-lateral {
         position: fixed;
         left: -250px;
     }
-    .max-barra-lateral{
+
+    .max-barra-lateral {
         left: 0;
     }
-    .menu{
+
+    .menu {
         display: flex;
     }
-    .menu ion-icon:nth-child(2){
+
+    .menu ion-icon:nth-child(2) {
         display: none;
     }
-    main{
+
+    main {
         margin-left: 0;
     }
-    main.min-main{
+
+    main.min-main {
         margin-left: 0;
     }
-    
 }
